update something i dont know

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -27,6 +27,7 @@
     var number_unassign_ticket = ApplicationDbContext.Ticket.Where(t => t.IsAssigned == false).ToList().Count;
     var number_new_ticket = ApplicationDbContext.Ticket.Where(t => t.Created >= currentTime.AddDays(-7)).ToList().Count;
     var number_resolve_ticket = ApplicationDbContext.Ticket.Where(t => t.StatusId == 5).Where(t => t.Updated >= currentTime.AddDays(-7)).ToList().Count;
+    var number_of_company = ApplicationDbContext.Company.ToList().Count;
 
 }
 <div class="container-fluid">
