--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -370,6 +370,12 @@
                                                 <p>Ticket Status</p>
                                             </a>
                                         </li>
+                                        <li class="nav-item">
+                                            <a asp-controller="Home" asp-action="UserOverview" class="nav-link">
+                                                <i class="fas fa-users"></i>
+                                                <p>User Overview</p>
+                                            </a>
+                                        </li>
                                     </ul>
                                 </li>
                             }
