--- a/Views/Tickets/Create.cshtml
+++ b/Views/Tickets/Create.cshtml
@@ -41,11 +41,18 @@
                             <label asp-for="DeveloperId" class="control-label"></label>
                             <select asp-for="DeveloperId" class="form-control" asp-items="ViewBag.DeveloperId"></select>
                         </div>
+                        @if (ViewBag.projectIdfromView is null)
+                        {
+                            <div class="form-group">
+                                <label asp-for="ProjectId" class="control-label"></label>
+                                <select asp-for="ProjectId" class="form-control" asp-items="ViewBag.ProjectId"></select>
+                            </div>
+                        }
+                        else
+                        {
+                            <input asp-for="ProjectId" type="hidden" value="@ViewBag.projectIdfromView" />
+                        }
 
-                        <div class="form-group">
-                            <label asp-for="ProjectId" class="control-label"></label>
-                            <select asp-for="ProjectId" class="form-control" asp-items="ViewBag.ProjectId"></select>
-                        </div>
                         <div class="form-group">
                             <label asp-for="StatusId" class="control-label"></label>
                             <select asp-for="StatusId" class="form-control" asp-items="ViewBag.StatusId"></select>
@@ -63,7 +70,7 @@
                             <input type="submit" value="Create New Ticket" class="btn btn-success float-left mr-2">
                         </div>
 
-                     
+
 
                     </div>
                     <!-- /.card-body -->
