--- a/Views/Tickets/Index.cshtml
+++ b/Views/Tickets/Index.cshtml
@@ -80,7 +80,7 @@
                                     @Html.DisplayFor(modelItem => item.Description)
                                 </td>
                                 <td>
-                                    @item.Created.ToString("dddd, dd MMMM yyyy")
+                                    @item.Created.ToString("dd MMMM yyyy - hh:mm tt")
                                 </td>
                                 <td>
                                     @item.Updated.ToString()
