--- a/Areas/Identity/Pages/Account/ResendEmailConfirmation.cshtml
+++ b/Areas/Identity/Pages/Account/ResendEmailConfirmation.cshtml
@@ -4,22 +4,37 @@
     ViewData["Title"] = "Resend email confirmation";
 }
 
-<h1>@ViewData["Title"]</h1>
-<h4>Enter your email.</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form method="post">
-            <div asp-validation-summary="All" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Input.Email"></label>
-                <input asp-for="Input.Email" class="form-control" />
-                <span asp-validation-for="Input.Email" class="text-danger"></span>
+<br />
+<br />
+<br />
+<br />
+<div class="row mt-5">
+    <div class="col"></div>
+    <div class="col">
+        <div class="card shadow-lg p-3 mb-5 bg-white rounded">
+            <div class="card-header bg-dark">
+                <h3 class="card-title">Resend email confirmation</h3>
             </div>
-            <button type="submit" class="btn btn-primary">Resend</button>
-        </form>
+            <div class="card-body">
+                <div class="row">
+                    <div class="col test-center">
+                        <form method="post">
+                            <div asp-validation-summary="All" class="text-danger"></div>
+                            <div class="form-group">
+                                <label asp-for="Input.Email"></label>
+                                <input asp-for="Input.Email" class="form-control" />
+                                <span asp-validation-for="Input.Email" class="text-danger"></span>
+                            </div>
+                            <button type="submit" class="btn btn-primary">Resend</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
+    <div class="col"></div>
 </div>
+
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
