--- a/Views/Tickets/Index.cshtml
+++ b/Views/Tickets/Index.cshtml
@@ -83,7 +83,7 @@
                                     @item.Created.ToString("dd MMMM yyyy - hh:mm tt")
                                 </td>
                                 <td>
-                                    @item.Updated.ToString()
+                                    @item.Updated.ToString("dd MMMM yyyy - hh:mm tt")
                                 </td>
                                 <td>
                                     @Html.DisplayFor(modelItem => item.Developer.FullName)
