--- a/Views/Notifications/Index.cshtml
+++ b/Views/Notifications/Index.cshtml
@@ -6,7 +6,7 @@
 @inject SignInManager<CustomUser> SignInManager
 @inject UserManager<CustomUser> UserManager
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Notifications";
 }
 
 <div class="row">
