--- a/Views/TicketAttachments/Index.cshtml
+++ b/Views/TicketAttachments/Index.cshtml
@@ -2,7 +2,7 @@
 @using BugTracker.Services
 @inject ICustomFileService CustomFileService 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Ticket Attachments";
 }
 
 <div class="row">
