--- a/Views/Inboxes/Deleted.cshtml
+++ b/Views/Inboxes/Deleted.cshtml
@@ -3,7 +3,7 @@
 @using Microsoft.AspNetCore.Identity
 @inject UserManager<CustomUser> userManager
 @{
-    ViewData["Title"] = "Inbox";
+    ViewData["Title"] = "Deleted";
 }
 
 <section class="content">
