--- a/Views/ProjectAttachments/Index.cshtml
+++ b/Views/ProjectAttachments/Index.cshtml
@@ -2,7 +2,7 @@
 @using BugTracker.Services
 @inject ICustomFileService CustomFileService
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Project Attachments";
 }
 <div class="row">
     <div class="col">
