--- a/Views/Projects/Index.cshtml
+++ b/Views/Projects/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<BugTracker.Models.Project>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Projects";
 }
 <!-- Main content -->
 <section class="content">
