--- a/Views/Tickets/ProjectIndex.cshtml
+++ b/Views/Tickets/ProjectIndex.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<BugTracker.Models.Ticket>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Tickets";
 }
 
 <div class="row">
