update google search bar

--- a/Views/Companies/Index.cshtml
+++ b/Views/Companies/Index.cshtml
@@ -38,7 +38,7 @@
             </div>
 
 
-            <div class="col">
+            <div class="col-8">
                 <!-- Default box -->
                 <div class="card">
                     <div class="card-header">
