--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -45,6 +45,8 @@
     <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@10"></script>
     <link rel="stylesheet" href="~/css/site.css" />
+    <script async src="https://cse.google.com/cse.js?cx=031b060c4c58cdae4"></script>
+
 </head>
 <body class="sidebar-mini layout-fixed sidebar-collapse" onload=display_ct();  style="background-image: url('@ViewData["background"]');width:100%;height:auto; background-repeat: no-repeat;background-attachment: fixed;background-size: cover;">
 
@@ -78,12 +80,14 @@
                     <!-- SEARCH FORM -->
                     <form class="form-inline ml-3">
                         <div class="input-group input-group-sm">
-                            <input class="form-control form-control-navbar" type="search" placeholder="Search" aria-label="Search">
+
+                            <div class="gcse-search"></div>
+                            @*<input class="form-control form-control-navbar" type="search" placeholder="Search" aria-label="Search">
                             <div class="input-group-append">
                                 <button class="btn btn-navbar" type="submit">
                                     <i class="fas fa-search"></i>
                                 </button>
-                            </div>
+                            </div>*@
                         </div>
                     </form>
 
