--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -80,8 +80,11 @@
                     <!-- SEARCH FORM -->
                     <form class="form-inline ml-3">
                         <div class="input-group input-group-sm">
-
-                            <div class="gcse-search"></div>
+                           
+                            <div class="gcse-search">
+                               
+                            </div>
+                           
                             @*<input class="form-control form-control-navbar" type="search" placeholder="Search" aria-label="Search">
                             <div class="input-group-append">
                                 <button class="btn btn-navbar" type="submit">
