--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -41,7 +41,7 @@
                     <div class="card-header bg-dark">
                         <h5 class="card-title">Quick Management Action</h5>
                     </div>
-                    <div class="card-body">
+                    <div class="card-body" style="padding-right:10px">
                         <a asp-controller="Tickets" asp-action="Create" class="btn btn-secondary pb-2 mb-2"><i class="fas fa-plus-circle"></i> Create New Ticket</a>
                         <a asp-controller="Projects" asp-action="Create" class="btn btn-secondary pb-2 mb-2"> <i class="fas fa-tasks"></i> Create New Projects</a>
                         <a asp-controller="Home" asp-action="ManageRole" class="btn btn-secondary pb-2 mb-2"><i class="fas fa-people-arrows"></i> Role's Management </a>
