--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -59,8 +59,11 @@
                 <nav class="main-header navbar navbar-expand navbar-white navbar-light">
                     <!-- Left navbar links -->
                     <ul class="navbar-nav">
-                        <li class="nav-item d-none d-sm-inline-block">
-                            <a style="color:black;font-size: 14px;font-weight: 800;letter-spacing: 1px;text-transform: uppercase;border-radius: 0;font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;" class="nav-link" asp-area="" asp-controller="Home" asp-action="Index"><span class="iconify" data-icon="ant-design:home-filled" data-inline="true"></span> Home</a>
+                        <li class="nav-item d-hidden-mini">
+                            <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" style="color:black;font-size: 14px;font-weight: 800;letter-spacing: 1px;text-transform: uppercase;border-radius: 0;font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;" asp-area="" asp-controller="Home" asp-action="Index"><span class="iconify d-none d-sm-inline-block" data-icon="ant-design:home-filled" data-inline="true"></span> Home</a>
                         </li>
                         <li class="nav-item d-none d-sm-inline-block">
                             <a class="nav-link" style="color:black;font-size: 14px;font-weight: 800;letter-spacing: 1px;text-transform: uppercase;border-radius: 0;font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;" href="https://github.com/arthastheking113" target="_blank"><span class="iconify" data-icon="akar-icons:github-fill" data-inline="true"></span> Github</a>
@@ -79,7 +82,7 @@
 
                     <!-- SEARCH FORM -->
                     <form class="form-inline ml-3 mr-4">
-                        <div class="input-group input-group-sm">                           
+                        <div class="input-group input-group-sm  ">                           
                             <div class="gcse-search"></div>     
                         </div>
                     </form>
